--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	AlviadExtreme by HTML5 UP
+	Sports Extremes by Alviad/Extreme
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -22,16 +22,16 @@
 					<p>Les Sports Extremes</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
+					<a href="#banner" class="button style2 scrolly-middle">Lire la suite</a>
 				</footer>
 			</section>
 
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>Pour comprendre le site...</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
+				<p>Le site a été créer par la team de <a href="http://twitter.com/ajlkn">AlviadExtrême.<br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
@@ -66,7 +66,7 @@
 		<!-- Portfolio -->
 			<article class="container box style2">
 				<header>
-					<h2>Magnis parturient</h2>
+					<h2>Les sports extrêmes</h2>
 					<p>Justo phasellus et aenean dignissim<br />
 					placerat cubilia purus lectus.</p>
 				</header>
